--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,18 @@
+name: Run Script on PR Merge to Master
 
+on:
+  pull_request:
+    types: [closed]
+    branches:
+      - master
+
+jobs:
+  run-script:
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run script.sh
+        run: bash ./script.sh
