--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Get changed files
+        id: files
+        run: |
+          git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.merge_commit_sha }} > changed_files.txt
+          cat changed_files.txt
+
+      - name: Output changed files
+        run: |
+          echo "Changed files:"
+          cat changed_files.txt
+
       - name: Run script.sh
-        run: bash ./script.sh values.yaml
+        run: bash ./script.sh changed_files.txt
         env:
           API_KEY: ${{ secrets.NR_API_KEY }}
