--- a/deployment_config.yml
+++ b/deployment_config.yml
@@ -6,5 +6,5 @@ configurations:
     managedEntityType: KUBERNETESCLUSTER
     orgId: b961cf81-d62b-4359-8822-7b1d6dadd374
     files:
-      - someDir/values.yml
+      - someDir/values.yaml
 
